log

Thu 14 Mar 2024 08:35:15 PM UTC: 
 exercises.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
43ca99e
Thu 14 Mar 2024 08:44:15 PM UTC: 
 exercises.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
e3e2666
Thu 14 Mar 2024 08:55:22 PM UTC: 
 exercises.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
5ab71e7
Thu 14 Mar 2024 08:59:18 PM UTC: 
 exercises.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  0|4
total_score: 30/70
aaec72e
Fri 15 Mar 2024 04:33:55 PM UTC: 
 exercises.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  0|0
cd15615
Fri 15 Mar 2024 04:35:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
23da535
Fri 15 Mar 2024 04:37:09 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
27a09d4
Fri 15 Mar 2024 04:39:37 PM UTC: 
 exercises.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
2b597f0
Fri 15 Mar 2024 05:07:10 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:176:10: error: expected identifier before ‘auto’
  176 |   libro->auto.anioNacimiento = anioNacimiento;
      |          ^~~~
Compilation failed
388c961
Fri 15 Mar 2024 05:07:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
5ba55e2
